--- a/meta.html
+++ b/meta.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="meta.css">
- 
+    <link rel="icon" href="agujero-negro.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Agujeros Negros">
     <meta property="og:url" content="https://93b6-187-252-251-76.ngrok-free.app/ProgWeb/Meta/AgujerosNegros/meta.html">
