--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="agujero-negro.png">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Agujeros Negros">
-    <meta property="og:url" content="https://93b6-187-252-251-76.ngrok-free.app/ProgWeb/Meta/AgujerosNegros/meta.html">
-    <meta property="og:image" content="https://93b6-187-252-251-76.ngrok-free.app/ProgWeb/Meta/AgujerosNegros/blackhole.jpeg">
+    <meta property="og:url" content="https://santiagojcg005.github.io/ProgWeb/Meta/AgujerosNegros/meta.html">
+    <meta property="og:image" content="https://santiagojcg005.github.io/ProgWeb/Meta/AgujerosNegros/blackhole.jpeg">
     <meta property="og:description" content="Artículo sobre los agujeros negros y su singularidad.
     De la Mano de  Stephen W.Hawking">
 
@@ -18,7 +18,7 @@
     <meta name="twitter:title" content="Agujeros Negros">
     <meta name="twitter:description" content="Artículo sobre los agujeros negros y su singularidad.
     De la Mano de  Stephen W.Hawking">
-    <meta name="twitter:image" content="https://93b6-187-252-251-76.ngrok-free.app/ProgWeb/Meta/AgujerosNegros/blackhole.jpeg">
+    <meta name="twitter:image" content="https://santiagojcg005.github.io/ProgWeb/Meta/AgujerosNegros/blackhole.jpeg">
     
     <title>Agujeros Negros</title>
 </head>
